[package]
name = "mem-map"
version = "0.1.0"
edition = "2018"
authors = ["Vulco", "FssAy"]

## Uncomment to build system library
#[lib]
#crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.4.*"
libc = "0.2.*"
winreg = "0.9.0"

[dependencies.winapi]
version = "0.3.9"
features = [
    "processthreadsapi",
    "winnt",
    "memoryapi",
    "minwindef",
    "psapi",
    "errhandlingapi",
]
